kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zettelkasten-postgres
  labels:
    app: zettelkasten-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zettelkasten-postgres
  template:
    metadata:
      labels:
        app: zettelkasten-postgres
    spec:
      containers:
        - name: zettelkasten-postgres
          image: postgres:10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: zettelkasten-postgres
spec:
  selector:
    app: zettelkasten-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
